--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -19,6 +19,7 @@
    </form>
    <p id="message-1"></p>
      <p id="message-2"></p>
+     <img id="img" class="portrait" src="">
     </div>
 
      {{>footer}}
